--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
     <!-- General description of your web application -->
 
-    <display-name>My Web Application</display-name>
+    <display-name>Mushup</display-name>
     <description>
       This is version X.X of an application to perform
       a wild and wonderful task, based on servlets and
@@ -38,7 +38,7 @@
 
     <context-param>
       <param-name>webmaster</param-name>
-      <param-value>myaddress@mycompany.com</param-value>
+      <param-value>philip@foolip.org</param-value>
       <description>
         The EMAIL address of the administrator to whom questions
         and comments about this application should be addressed.
