--- a/neo4j/pom.xml
+++ b/neo4j/pom.xml
@@ -4,48 +4,9 @@
   <groupId>org.foolip.mushup</groupId>
   <artifactId>mushup</artifactId>
   <packaging>jar</packaging>
-  <version>0.1</version>
+  <version>1.0-SNAPSHOT</version>
   <name>mushup</name>
   <url>http://mushup.foolip.org</url>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.0.2</version>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-	</configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>copy</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.neo4j</groupId>
-                  <artifactId>neo</artifactId>
-                  <version>1.0-b6</version>
-                  <destFileName>neo.jar</destFileName>
-                </artifactItem>
-              </artifactItems>
-	      <outputDirectory>${project.build.directory}/lib</outputDirectory>
-	      <overWriteReleases>false</overWriteReleases>
-	      <overWriteSnapshots>true</overWriteSnapshots>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
   <repositories>
     <repository>
       <id>neo4j-public-repository</id>
@@ -60,6 +21,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.musicbrainz</groupId>
+      <artifactId>jbrainz</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo</artifactId>
       <version>1.0-b6</version>
@@ -69,5 +35,51 @@
       <artifactId>index-util</artifactId>
       <version>0.3-SNAPSHOT</version>
     </dependency>
+    <!--
+    <dependency> 
+      <groupId>org.neo4j</groupId>
+      <artifactId>shell</artifactId>
+      <version>1.0-b6</version>
+    </dependency>
+    -->
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.0.2</version>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+	</configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.neo4j</groupId>
+                  <artifactId>shell</artifactId>
+                  <version>1.0-b6</version>
+                  <destFileName>shell.jar</destFileName>
+                </artifactItem>
+              </artifactItems>
+	      <outputDirectory>${project.build.directory}</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+    </plugins>
+  </build>
 </project>
