--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -8,20 +8,160 @@
   <name>Mushup!</name>
   <url>http://mushup.foolip.org</url>
   <dependencies>
+
+    <dependency>
+      <groupId>org.musicbrainz</groupId>
+      <artifactId>jbrainz</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.openid4java</groupId>
+      <artifactId>openid4java</artifactId>
+      <version>0.9.3</version>
+      <exclusions>
+<!--
+	<exclusion>
+	  <groupId>commons-httpclient</groupId>
+	  <artifactId>commons-httpclient</artifactId>
+	</exclusion>
+
+	<exclusion>
+	  <groupId>org.htmlparser</groupId>
+	  <artifactId>htmlparser</artifactId>
+	</exclusion>
+
+	<exclusion>
+	  <groupId>org.openxri</groupId>
+	  <artifactId>openxri-syntax</artifactId>
+	</exclusion>
+
+	<exclusion>
+	  <groupId>org.openxri</groupId>
+	  <artifactId>openxri-client</artifactId>
+	</exclusion>
+-->
+	<exclusion>
+	  <groupId>com.ibm.icu</groupId>
+	  <artifactId>icu4j</artifactId>
+	</exclusion>
+
+	<exclusion>
+	  <groupId>net.sf.ehcache</groupId>
+	  <artifactId>ehcache</artifactId>
+	</exclusion>
+<!--
+	<exclusion>
+	  <groupId>xml-security</groupId>
+	  <artifactId>xmlsec</artifactId>
+	</exclusion>
+
+	<exclusion>
+	  <groupId>org.apache.ws.commons.axiom</groupId>
+	  <artifactId>axiom-api</artifactId>
+	</exclusion>
+-->
+	<exclusion>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-jdbc</artifactId>
+	</exclusion>
+<!--
+	<exclusion>
+	  <groupId>log4j</groupId>
+	  <artifactId>log4j</artifactId>
+	</exclusion>
+-->
+      </exclusions>
+    </dependency>
+    <!-- stop openid4java from pulling some nonsense -->
+    <dependency>
+      <groupId>xalan</groupId>
+      <artifactId>xalan</artifactId>
+      <version>2.6.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.8.1</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.3.03</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>[1.0,)</version>
+    </dependency>
+<!--
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>[1.7.0,)</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>[3.1,)</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-digester</groupId>
+      <artifactId>commons-digester</artifactId>
+      <version>[1.6,)</version>
+      <exclusions>
+        <exclusion>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>[1.0,)</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>[2.1,)</version>
+    </dependency>
+-->
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.1</version>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jsp-api</artifactId>
       <version>2.0</version>
       <scope>provided</scope>
     </dependency>
-<!--
+
     <dependency>
-      <groupId>servletapi</groupId>
-      <artifactId>servletapi</artifactId>
-      <version>[2.3,)</version>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.4</version>
       <scope>provided</scope>
     </dependency>
--->
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>[1.0,)</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -30,15 +170,75 @@
     </dependency>
   </dependencies>
   <build>
+    <finalName>mushup</finalName> 
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.0.2</version>
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
 	</configuration>
+      </plugin>
+      <!-- Cargo HotDeploy -->
+      <plugin>
+        <groupId>org.codehaus.cargo</groupId>
+        <artifactId>cargo-maven2-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>verify-deploy</id>
+            <phase>install</phase>
+            <goals>
+              <goal>deployer-deploy</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>clean-undeploy</id>
+            <phase>pre-clean</phase>
+            <goals>
+              <goal>deployer-undeploy</goal>
+            </goals>
+          </execution>
+        </executions>
+
+	<configuration>
+	
+	  <!-- Container Configuration -->
+          <container>
+            <containerId>tomcat5x</containerId>
+	    <type>remote</type>
+          </container>
+
+	  <!-- Configuration to use with the container -->
+          <configuration>
+	    <type>runtime</type>
+	    <properties>
+              <cargo.tomcat.manager.url>
+                http://localhost:8180/manager
+              </cargo.tomcat.manager.url>
+              <cargo.remote.username>
+                philip
+              </cargo.remote.username>
+              <cargo.remote.password>
+ 		cd4c778a
+              </cargo.remote.password>
+	    </properties>
+	  </configuration>
+
+	  <!-- Deployer and Deployables configuration -->
+	  <deployer>
+	    <type>remote</type>
+	    <deployables>
+	      <deployable>
+	        <groupId>org.foolip.mushup</groupId>
+	        <artifactId>mushup</artifactId>
+	        <type>war</type>
+	        <pingURL>http://localhost:8180/mushup/</pingURL>
+	      </deployable>
+	    </deployables>
+	  </deployer>
+
+        </configuration>
       </plugin>
     </plugins>
   </build>
