--- a/tomcat/src/main/webapp/WEB-INF/web.xml
+++ b/tomcat/src/main/webapp/WEB-INF/web.xml
@@ -1,20 +1,13 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-
-<!DOCTYPE web-app 
-    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" 
-    "http://java.sun.com/dtd/web-app_2_3.dtd">
-
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
     <!-- General description of your web application -->
 
     <display-name>Mushup!</display-name>
     <description>
-      This is version X.X of an application to perform
-      a wild and wonderful task, based on servlets and
-      JSP pages.  It was written by Dave Developer
-      (dave@mycompany.com), who should be contacted for
-      more information.
+      Mushup! is a mashup of MusicBrainz and other sources.
     </description>
 
 
@@ -44,104 +37,40 @@
       </description>
     </context-param>
 
-
-    <!-- Servlet definitions for the servlets that make up
-         your web application, including initialization
-         parameters.  With Tomcat, you can also send requests
-         to servlets not listed here with a request like this:
-
-           http://localhost:8080/{context-path}/servlet/{classname}
-
-         but this usage is not guaranteed to be portable.  It also
-         makes relative references to images and other resources
-         required by your servlet more complicated, so defining
-         all of your servlets (and defining a mapping to them with
-         a servlet-mapping element) is recommended.
-
-         Servlet initialization parameters can be retrieved in a
-         servlet or JSP page by calling:
-
-             String value =
-               getServletConfig().getInitParameter("name");
-
-         where "name" matches the <param-name> element of
-         one of these initialization parameters.
-
-         You can define any number of servlets, including zero.
-    -->
-
-    <servlet>
-      <servlet-name>controller</servlet-name>
-      <description>
-        This servlet plays the "controller" role in the MVC architecture
-        used in this application.  It is generally mapped to the ".do"
-        filename extension with a servlet-mapping element, and all form
-        submits in the app will be submitted to a request URI like
-        "saveCustomer.do", which will therefore be mapped to this servlet.
-
-        The initialization parameter namess for this servlet are the
-        "servlet path" that will be received by this servlet (after the
-        filename extension is removed).  The corresponding value is the
-        name of the action class that will be used to process this request.
-      </description>
-      <servlet-class>com.mycompany.mypackage.ControllerServlet</servlet-class>
-      <init-param>
-        <param-name>listOrders</param-name>
-        <param-value>com.mycompany.myactions.ListOrdersAction</param-value>
-      </init-param>
-      <init-param>
-        <param-name>saveCustomer</param-name>
-        <param-value>com.mycompany.myactions.SaveCustomerAction</param-value>
-      </init-param>
-      <!-- Load this servlet at server startup time -->
-      <load-on-startup>5</load-on-startup>
-    </servlet>
-
-    <servlet>
-      <servlet-name>graph</servlet-name>
-      <description>
-        This servlet produces GIF images that are dynamically generated
-        graphs, based on the input parameters included on the request.
-        It is generally mapped to a specific request URI like "/graph".
-      </description>
-    </servlet>
-
     <servlet>
         <servlet-name>HelloWorldExample</servlet-name>
         <servlet-class>org.foolip.mushup.Hello</servlet-class>
     </servlet>
-
-    <!-- Define mappings that are used by the servlet container to
-         translate a particular request URI (context-relative) to a
-         particular servlet.  The examples below correspond to the
-         servlet descriptions above.  Thus, a request URI like:
-
-           http://localhost:8080/{contextpath}/graph
-
-         will be mapped to the "graph" servlet, while a request like:
-
-           http://localhost:8080/{contextpath}/saveCustomer.do
-
-         will be mapped to the "controller" servlet.
-
-         You may define any number of servlet mappings, including zero.
-         It is also legal to define more than one mapping for the same
-         servlet, if you wish to.
-    -->
-
-    <servlet-mapping>
-      <servlet-name>controller</servlet-name>
-      <url-pattern>*.do</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-      <servlet-name>graph</servlet-name>
-      <url-pattern>/graph</url-pattern>
-    </servlet-mapping>
-
     <servlet-mapping>
         <servlet-name>HelloWorldExample</servlet-name>
         <url-pattern>/hello</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>MBTest</servlet-name>
+        <servlet-class>org.foolip.mushup.MBTest</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MBTest</servlet-name>
+        <url-pattern>/mbtest</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>MushSearch</servlet-name>
+        <servlet-class>org.foolip.mushup.Search</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MushSearch</servlet-name>
+        <url-pattern>/search/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+      <servlet-name>OpenID Login</servlet-name>
+      <servlet-class>org.foolip.mushup.ConsumerServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+      <servlet-name>OpenID Login</servlet-name>
+      <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
     <!-- Define the default session timeout for your application,
@@ -152,5 +81,4 @@
     <session-config>
       <session-timeout>30</session-timeout>    <!-- 30 minutes -->
     </session-config>
-
 </web-app>
