git-svn-id: file:///media/hdd0/svn/mushup@51 e7c1934a-894b-0410-b661-f963fa50a05f

--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -16,6 +16,12 @@
     </dependency>
 
     <dependency>
+      <groupId>atg.taglib.json</groupId>
+      <artifactId>json-taglib</artifactId>
+      <version>0.5-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.openid4java</groupId>
       <artifactId>openid4java</artifactId>
       <version>0.9.3</version>
@@ -98,6 +104,7 @@
       <artifactId>standard</artifactId>
       <version>[1.0,)</version>
     </dependency>
+
 <!--
     <dependency>
       <groupId>commons-beanutils</groupId>
