--- a/tomcat/src/main/webapp/WEB-INF/web.xml
+++ b/tomcat/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,11 @@
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
 
+  <context-param>
+    <param-name>atg.taglib.json.escapeXml</param-name>
+    <param-value>false</param-value>
+  </context-param>
+
   <session-config>
     <session-timeout>60</session-timeout>
   </session-config>
