--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -7,12 +7,31 @@
   <version>1.0-SNAPSHOT</version>
   <name>Mushup!</name>
   <url>http://mushup.foolip.org</url>
+  <repositories>
+    <repository>
+      <id>neo4j-public-repository</id>
+      <url>http://m2.neo4j.org</url>
+    </repository>
+  </repositories>
+
   <dependencies>
 
     <dependency>
       <groupId>org.musicbrainz</groupId>
       <artifactId>jbrainz</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo</artifactId>
+      <version>1.0-rc1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>index-util</artifactId>
+      <version>0.4-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -86,12 +105,14 @@
       <version>2.6.0</version>
       <scope>provided</scope>
     </dependency>
+<!--
     <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
       <version>2.8.1</version>
       <scope>provided</scope>
     </dependency>
+-->
     <dependency>
       <groupId>xml-apis</groupId>
       <artifactId>xml-apis</artifactId>
