git-svn-id: file:///media/hdd0/svn/mushup@60 e7c1934a-894b-0410-b661-f963fa50a05f

--- a/tomcat/src/main/webapp/WEB-INF/web.xml
+++ b/tomcat/src/main/webapp/WEB-INF/web.xml
@@ -35,10 +35,16 @@
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
 
+  <!-- don't XML escape JSON output -->
   <context-param>
     <param-name>atg.taglib.json.escapeXml</param-name>
     <param-value>false</param-value>
   </context-param>
+
+  <!-- start and shutdown hooks -->
+  <listener>
+    <listener-class>org.foolip.mushup.ContextListener</listener-class>
+  </listener>
 
   <session-config>
     <session-timeout>60</session-timeout>
