--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -30,6 +30,12 @@
 
     <dependency>
       <groupId>org.neo4j</groupId>
+      <artifactId>shell</artifactId>
+      <version>1.0-rc1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.neo4j</groupId>
       <artifactId>index-util</artifactId>
       <version>0.4-SNAPSHOT</version>
     </dependency>
@@ -166,8 +172,7 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.1.1</version>
-      <scope>provided</scope>
+      <version>[1.0,)</version>
     </dependency>
 
     <dependency>
