git-svn-id: file:///media/hdd0/svn/mushup@62 e7c1934a-894b-0410-b661-f963fa50a05f

--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -47,6 +47,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.htmlparser</groupId>
+      <artifactId>htmlparser</artifactId>
+      <version>1.6</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.openid4java</groupId>
       <artifactId>openid4java</artifactId>
       <version>0.9.3</version>
