something that works
git-svn-id: file:///media/hdd0/svn/mushup@64 e7c1934a-894b-0410-b661-f963fa50a05f

--- a/tomcat/src/main/webapp/WEB-INF/web.xml
+++ b/tomcat/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,15 @@
   </servlet-mapping>
 
   <servlet>
+    <servlet-name>ShowArtist</servlet-name>
+    <servlet-class>org.foolip.mushup.ShowArtist</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ShowArtist</servlet-name>
+    <url-pattern>/artist/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>OpenID Login</servlet-name>
     <servlet-class>org.foolip.mushup.ConsumerServlet</servlet-class>
     </servlet>
