support for artist alias
git-svn-id: file:///media/hdd0/svn/mushup@72 e7c1934a-894b-0410-b661-f963fa50a05f

--- a/jbrainz/pom.xml
+++ b/jbrainz/pom.xml
@@ -1,49 +1,55 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.musicbrainz</groupId>
-  <artifactId>jbrainz</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>JBrainz</name>
-  <url>http://musicbrainz.org</url>
-  <repositories>
-    <repository>
-      <id>neo4j-public-repository</id>
-      <url>http://m2.neo4j.org</url>
-    </repository>
-  </repositories>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.musicbrainz</groupId>
+	<artifactId>jbrainz</artifactId>
+	<packaging>jar</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<name>JBrainz</name>
+	<url>http://musicbrainz.org</url>
+	<repositories>
+		<repository>
+			<id>neo4j-public-repository</id>
+			<url>http://m2.neo4j.org</url>
+		</repository>
+	</repositories>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.neo4j</groupId>
-      <artifactId>neo</artifactId>
-      <version>1.0-b7-SNAPSHOT</version>
-    </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo</artifactId>
+			<version>1.0-b7-SNAPSHOT</version>
+		</dependency>
 
-    <dependency>
-      <groupId>org.neo4j</groupId>
-      <artifactId>index-util</artifactId>
-      <version>0.5-SNAPSHOT</version>
-    </dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo-utils</artifactId>
+			<version>1.0-b7-SNAPSHOT</version>
+		</dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-	</configuration>
-      </plugin>
-    </plugins>
-  </build>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>index-util</artifactId>
+			<version>0.5-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
