support artist aliases
git-svn-id: file:///media/hdd0/svn/mushup@73 e7c1934a-894b-0410-b661-f963fa50a05f

--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -33,11 +33,18 @@
       <version>1.0-b7-SNAPSHOT</version>
     </dependency>
 
-    <dependency>
+	<dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>index-util</artifactId>
       <version>0.5-SNAPSHOT</version>
     </dependency>
+
+	<!-- for neo shell -->
+	<dependency>
+		<groupId>jline</groupId>
+		<artifactId>jline</artifactId>
+		<version>0.9.94</version>
+	</dependency>
 
     <dependency>
       <groupId>org.hibernate</groupId>
